ARROW-7884: [C++] Relax concurrency rules around GetSize()

RandomAccessFile::GetSize() implementations don't (and shouldn't) move or read the file pointer,
so allow issuing GetSize() calls concurrently.

This should fix a crash (in debug mode only) when reading certain types of malformed
Parquet files.